fix typo in email text

--- a/.github/workflows/gpl-nag-email.yaml
+++ b/.github/workflows/gpl-nag-email.yaml
@@ -116,7 +116,7 @@ jobs:
 
             However, the GNU GPL-licensed source code cannot be found on MikroTik’s website or other online sources.  Based on information posted on forum.mikrotik.com from purported employees of Mikrotik, sources are provided based on an email request.  See https://forum.mikrotik.com/viewtopic.php?t=201561#p1036546.
 
-            Per that direction, please find this email to the GPLv2 and/or GPLv3 licensed source code included in RouterOS, along with any build instructions or other materials as required by the various licenses.   If RouterOS contains other open source code with public disclosure requirements, please consider this request to encompass those sources.
+            Per that direction, please find this email to formally request the GPLv2 and/or GPLv3 licensed source code included in RouterOS, along with any build instructions or other materials as required by the various licenses.   If RouterOS contains other open source code with public disclosure requirements, please consider this request to encompass those sources.
 
             Thank you for your time and attention to this matter. 
 
